# yadiff

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml  security.night.yml  security.push.yml
src/: main.rs
src/yadiff/: lib.rs
src/yadiff/diff/: client.rs  mod.rs  models.rs
src/yadiff/filescanner/: client.rs  mod.rs  models.rs
src/yadiff/yadisk/: client.rs  mod.rs  models.rs
