[package]
name = "yadiff"
version = "0.1.0"
authors = ["Vladimir Puzakov <vppuzakov@gmail.com>"]
edition = "2018"

[lib]
name = "yadiff"
path = "src/yadiff/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2.33", features = ["yaml"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust = "0.4"
